test/files/neg/missing-implicit.check
missing-implicit.scala:23: error: implicit error;
!I e: TC[String] {type Int = <none>}
   (foo)

  implicitly[TC[String] { type Int}]
            ^
missing-implicit.scala:24: error: implicit error;
!I e: XC[String]
  bar

  implicitly[XC[String]]
            ^
missing-implicit.scala:25: error: implicit error;
!I e: U
   (nope)

  implicitly[U]
            ^
missing-implicit.scala:26: error: implicit error;
!I e: V
  no way

  implicitly[V]
            ^
missing-implicit.scala:31: error: implicit error;
!I v: V
  no way

  f
  ^
missing-implicit.scala:32: error: implicit error;
!I v: V
  huh

  g
  ^
missing-implicit.scala:49: error: implicit error;
!I e: F[Int]
  No F of Int

  implicitly[F[Int]]
            ^
missing-implicit.scala:50: error: implicit error;
!I e: M[Int]
   (No F of Int)

  implicitly[M[Int]]
            ^
missing-implicit.scala:51: error: implicit error;
!I e: AX
   (No F of String)

  implicitly[AX]
            ^
missing-implicit.scala:52: error: implicit error;
!I e: X0
   (Missing X3 of Char and Int and String)

  implicitly[X0]
            ^
10 errors
